infra/k8s/user-mysql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-mysql-depl
spec:
  selector:
    matchLabels:
      app: user-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: user-mysql
    spec:
      containers:
      - image: mysql:oracle
        name: user-mysql
        ports:
        - containerPort: 3306
          name: user-mysql
        volumeMounts:
        - name: user-mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: user-mysql-persistent-storage
        persistentVolumeClaim:
          claimName: user-mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: user-mysql-srv
spec:
  selector:
    app: user-mysql
  ports:
  - name: user-mysql
    protocol: TCP
    port: 3306
    targetPort: 3306
